fix: use Java-compatible empty map in config provider test